SubVersion: $Id$

Log of changes:	tilp (cables, calcs, files, ticonv)

- 11/03/2008, version 1.11: (1.2.0, 1.1.2, 1.1.1, 1.0.6): roms
	- fixed various bug crashes due to non NULLified pointers in 
	pbar structure.
	=> released on 28/03/2008

- 26/01/2008, version 1.10b: (1.2.0, 1.1.2, 1.1.0, 1.0.6): roms
	- fixed InnoSetup installer for use with GTK+ >= 2.10.x
	
- 16/10/2007, version 1.10: (1.2.0, 1.1.0, 1.1.0, 1.0.6): roms
	- adding NSpire support
	- ticables library does not reset link at opening stage any longer.
		Managed by TiLP now.
	- modified CalcInfos structure to support NSpire
	- format IDLIST for NSpire
	- reworked Device Infos dialog box
	- bug to fix: with text msg_box: need to press a key before ENTER 
	rather than pressing ENTER
	- added support for the alternate (KDE/M$) button order (kevin)
	=> released on 10/01/2008

- 01/10/2007, version 1.09: (1.1.1, 1.0.9, 1.0.9, 1.0.5): roms
	- removed old GTK file selector because being deprecated with GTK+ 2.12
	- slightly increased timeout when sending FLASH applications, the
	  previous timeout is nearly too small for big apps
	- fixed KDE file selector support (needed autoheader rerun) (kevin)
	- remember filesel_type=native when saving the configuration (kevin)
	- fixed dirname+filename concatenation for KDE file selector (kevin)
	=> not released
	
- 17/09/2007, version 1.08 (1.1.0, 1.0.8, 1.0.8, 1.0.5): roms
	- screenshots can be copied into the clipboard
	- use fixed fonts for release and manpage dboxes
	- slightly reworked options in popup menus
	- don't overwrite variable as default behavior for action box
	- refresh progress bar (bug)
	- check for AMS/OS version for clock support
	=> tested & validated
	=> released on 25/09/2007

- 13/09/2007, version 1.07b (1.1.0, 1.0.7, 1.0.7, 1.0.4): roms
	- fixed ticables2 library due to bad check of dhahelper

- 03/09/2007, version 1.07a (1.0.9, 1.0.7, 1.0.7, 1.0.4): roms
	- re-released due to missing file in Windows Installer (dhahelper.sys)